--- a/education.html
+++ b/education.html
@@ -1,206 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<! bootstrap css -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- main css -->
-  <link rel="stylesheet" href="css/main.css">
-<! -- font awesome -->
-  <script src="js/all.js"></script>
-  <title>Rocky Gap, Virginia Education</title>
-</head>
-
-<body>
-  
-<!-- nav element -->
-<nav class="navbar navbar-expand-lg px-3" id="navBar">
-  <a href="#" class="navbar-brand">
-    <img src="img/Eagle.png" alt="logo">
-  </a>
-<button class="navbar-toggler" type="button" data-toggle='collapse' data-target='#myNav'>
-  <span class="navbar-icon">
-    <i class="fas fa-bars"></i>
-  </span>
-</button>
-  <div class="collapse navbar-collapse" id="myNav">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item active">
-        <a href="index.htm" class="nav-link">
-          home
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="community.htm" class="nav-link">
-          community
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="education.htm" class="nav-link">
-          education
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="government.htm" class="nav-link">
-          government
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="photos.htm" class="nav-link" target="_blank">
-          gallery
-        </a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          links
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="https://www.blandcountyva.gov/" target="_blank">Bland County Va Website</a>  
-          <a class="dropdown-item" href="https://blandcountyhistsoc.org/" target="_blank">Bland County Historical Society</a>
-          <a class="dropdown-item" href="https://www.bland.k12.va.us/" target="_blank">Bland County Public Schools</a>
-          <a class="dropdown-item" href="https://www.blandcountyva.gov/events/" target="_blank">Community Calendar</a>
-          <a class="dropdown-item" href="https://forecast.weather.gov/MapClick.php?lat=37.241440700000055&lon=-81.10675179999998#.YK2rg6hKjIU" target="_blank">Weather Forcast</a>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Rocky Gap, Virginia Education</title>
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="nav-container">
+        <div class="nav-header">
+          <img src="img/logo-2.png" alt="logo">
+            <a href="#" class="nav-toggle" id="hamburger">
+              <span class="bar bar-top"></span>
+              <span class="bar bar-mid"></span>
+              <span class="bar bar-bottom"></span>
+            </a>
         </div>
-      </li>
-    </ul>
- <!-- social icons -->
-    <div class="nav-icons d-none d-lg-block">
-      <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="nav-icon">
-        <i class="fab fa-facebook"></i>
-      </a>
-      <a href="https://twitter.com/blandcountyva" target="_blank" class="nav-icon">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="photos.htm" target="_blank" class="nav-icon">
-        <i class="fas fa-camera"></i>
-      </a>
-    </div>
-  </div>
-</nav>
-<!-- end of nav element -->
+        <ul class="nav-links">
+          <li class="nav-link">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-link">
+            <a href="community.html">Community</a>
+          </li>
+          <li class="nav-link">
+            <a href="education.html">Education</a>
+          </li>
+          <li class="nav-link">
+            <a href="government.html">Government</a>
+          </li>
+          <li class="nav-link">
+            <a href="gallery.html">Gallery</a>
+          </li>
+          <li class="nav-link menu-links">
+            <a href="#" class="dropdown">Links <i class="plus"></i></a>
+            <ul class="sub-menu">
+              <li class="menu-item"><a href="https://www.blandcountyva.gov/" target="_blank">Bland County VA Website</a></li>
+              <li class="menu-item"><a href="https://blandcountyhistsoc.org/" target="_blank">Bland County Historical Society</a></li>
+              <li class="menu-item"><a href="https://www.bland.k12.va.us/" target="_blank">Bland County Public Schools</a></li>
+              <li class="menu-item"><a href="https://www.blandcountyva.gov/events/" target="_blank">Community Calendar</a></li>
+              <li class="menu-item"><a href="https://forecast.weather.gov/MapClick.php?lat=37.241440700000055&lon=-81.10675179999998#.YK2rg6hKjIU" target="_blank">Weather Forcast</a></li>
+            </ul>
+          </li>
+        </ul>
+        <div class="nav-icons">
+          <a href="https://www.facebook.com/RockyGap.VA/"" target="_blank" class="nav-icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+          <a href="https://twitter.com/blandcountyva" target="_blank" class="nav-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://www.google.com/search?rlz=1C1CHBF_enUS858US858&sxsrf=AB5stBiDQSTPEBB-Fhowz_jPqs2yz_6IYQ:1689977826975&q=rocky+gap+va+images&tbm=isch&source=univ&fir=VLU8CmyBwZbEqM%252CO3vELgHQNZrKHM%252C_%253Bze44_q_FakkxnM%252CHZgERr2DExO2TM%252C_%253B10UWeERkgcQFnM%252CyH8sgEoom3I0pM%252C_%253BGsYR0fJhtFpMLM%252C7OGTq_GkpYQqaM%252C_%253BhS4NoIm8a0FrcM%252Ck90jooonHB4nRM%252C_%253BznQxXG5gLSm9YM%252CrpJ_gLuUjK3nKM%252C_%253B3YgSFCTR5noMNM%252CXlH77B6R32llRM%252C_%253BWDwgxYATgLd5XM%252C7OGTq_GkpYQqaM%252C_%253Bvf074gIuSzPOAM%252Cb2pOkTEtvOCtNM%252C_%253B2W11vrbRfYxmjM%252ClTy8JHsBIopxkM%252C_&usg=AI4_-kTKg70vAa3DtrS6JLXV4LXPgaGMLw&sa=X&ved=2ahUKEwjX7LeA6qCAAxXvEFkFHcSODtoQjJkEegQIDRAC&biw=1366&bih=643&dpr=1" target="_blank" class="nav-icon">
+            <i class="fas fa-camera"></i>
+          </a>
+        </div>
+      </div>
+    </nav>
 
-<section class="education">
-    <h1>Bland County High School</h1>
-    <img src="img/bear.png">
-    <h5>176 Eagles Road Rocky Gap, VA 24366</h5>
-    <h5>(276)928-1100</h5>
-    <button class="btn">
-      <a href="https://www.bland.k12.va.us/apps/pages/index.jsp?uREC_ID=310940&type=d" target="_blank">Website</a>
-    </button>
-  <div class="schools-img">
-     <img src="img/school-2.jpg">
-     <img src="img/Rocky Gap Elementary.jpg">
-   </div>
-   <div class="info-text">
-       <p>
-        Bland County High School, formerly known as Rocky Gap High School is located in Rocky Gap, VA and serves 
-        students from grades 7-12. The school is now the only high school in the county as a result of the 
-        consolidation with Bland High School in 2014. The school provides it's students a safe and challenging
-        environment and a quality education in a number of courses and also offers a number of extra cirricular 
-        activities, such as clubs and athletics. 
-       </p>
-   </div>
-   <div class="card-section">
-       <div class="card">
-           <h5>Courses</h5>
-           <p>Math</p>
-           <p>English</p>
-           <p>History</p>
-           <p>Science</p>
-           <p>Art</p>
-           <p>Foreign Language</p>
-           <p>Physical Education</p>
-           <p>Vocational</p>
-       </div>
-       <div class="card">
-           <h5>Clubs</h5>
-           <p>Appalachian Arts and Studies in the Schools</p>
-           <p>Senior Beta</p>
-           <p>Calculus Club</p>
-           <p>Future Business Leaders of America</p>
-           <p>Family, Career, and Community Leaders of America</p>
-           <p>Future Farmers of America</p>
-           <p>4-H</p>
-           <p>Forensics</p>
-           <p>History Club</p>
-           <p>MAAC</p>
-           <p>Robotics</p>
-           <p>Student Council Association</p>
-           <p>Spanish Club</p>
-           <p>Talent Search</p>
-           <p>Upward Bound</p>
-           <p>Theatre</p>
-           <p>School Newspaper</p>
-           <p>Yearbook</p>
-       </div>
-       <div class="card">
-           <h5>Sports and activities</h5>
-           <p>Varsity Baseball</p>
-           <p>Middle School Baseball</p>
-           <p>Varsity Softball</p>
-           <p>JV Softball</p>
-           <p>Soccer</p>
-           <p>Tennis</p>
-           <p>Cross Country</p>
-           <p>Varsity Football</p>
-           <p>JV Football</p>
-           <p>Varsity Volleyball</p>
-           <p>Varsity Girls' Basketball</p>
-           <p>JV Girls' Basketball</p>
-           <p>Varsity Boys' Basketball</p>
-           <p>JV Boys' Basketball</p>
-           <p>Middle School Basketball</p>
-           <p>Band</p>
-           <p>Cheerleading</p>
-       </div>
-    </div>
-        <h1>Bland Elementary School</h1>
-        <img src="img/cub.png" class="elementary-img">
-        <h5>31 Rocket Drive Bland, VA 24315</h5>
-        <h5>(276)688-4451</h5>
-        <button class="btn">
-          <a href="https://www.bland.k12.va.us/apps/pages/index.jsp?uREC_ID=307615&type=d" target="_blank">Website</a>
-        </button>
-    <div class="elementary-img2">
-        <img src="img/elementary.jpg">
-    </div>
-    <div class="info-text">
-        <p>Along with the high school in 2014, Bland Elementary School and Rocky Gap Elementary schools
-           consolidated to form Bland County Elementary School. Unlike the high school, students at Rocky Gap
-           elementary school were moved to Bland Elementary School located in nearby Bland, VA as part of the 
-           consolidation. The school provides a safe and challenging environment and a quality early education 
-           for the younger students of the county in grades K-6.
+    <section class="education">
+      <h1>Bland County High School</h1>
+      <img src="img/bear.png">
+      <h5>176 Eagles Road Rocky Gap, VA 24366</h5>
+      <h5>(276)928-1100</h5>
+      <button class="btn">
+        <a href="https://www.bland.k12.va.us/apps/pages/index.jsp?uREC_ID=310940&type=d" target="_blank">Website</a>
+      </button>
+      <div class="schools-img">
+        <img src="img/school-2.jpg">
+        <img src="img/Rocky Gap Elementary.jpg">
+      </div>
+      <div class="info-text">
+        <p>
+          Bland County High School, formerly known as Rocky Gap High School is located in Rocky Gap, VA and serves 
+          students from grades 7-12. The school is now the only high school in the county as a result of the 
+          consolidation with Bland High School in 2014. The school provides it's students a safe and challenging
+          environment and a quality education in a number of courses and also offers a number of extra cirricular 
+          activities, such as clubs and athletics. 
         </p>
-    </div>
-</section>
-<!-- footer -->
-<footer class="footer py-4">
-    <div class="footer-icons d-flex justify-content-around">
-      <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="footer-icon">
-        <i class="fab fa-facebook"></i>
-      </a>
-      <a href="https://twitter.com/blandcountyva" target="_blank" class="footer-icon">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="photos.htm" target="_blank" class="footer-icon">
-        <i class="fas fa-camera"></i>
-      </a>
-      <a href="https://www.linkedin.com/jobs/jobs-in-rocky-gap-virginia-va?trk=location_hub_city_cross_link&pageNum=0&position=6&currentJobId=1217333385" target="_blank" class="footer-icon">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="https://www.google.com/search?q=rocky+gap+va&oq=rocky+gap+va&aqs=chrome..69i57j0l4j69i60.12054j0j7&sourceid=chrome&ie=UTF-8" target="_blank" class="footer-icon">
-        <i class="fab fa-google"></i>
-      </a>
-    </div>
-  </footer>
+      </div>
+      <div class="card-section">
+        <div class="card">
+          <h5>Courses</h5>
+          <p>Math</p>
+          <p>English</p>
+          <p>History</p>
+          <p>Science</p>
+          <p>Art</p>
+          <p>Foreign Language</p>
+          <p>Physical Education</p>
+          <p>Vocational</p>
+        </div>
+        <div class="card">
+          <h5>Clubs</h5>
+          <p>Appalachian Arts and Studies in the Schools</p>
+          <p>Senior Beta</p>
+          <p>Calculus Club</p>
+          <p>Future Business Leaders of America</p>
+          <p>Family, Career, and Community Leaders of America</p>
+          <p>Future Farmers of America</p>
+          <p>4-H</p>
+          <p>Forensics</p>
+          <p>History Club</p>
+          <p>MAAC</p>
+          <p>Robotics</p>
+          <p>Student Council Association</p>
+          <p>Spanish Club</p>
+          <p>Talent Search</p>
+          <p>Upward Bound</p>
+          <p>Theatre</p>
+          <p>School Newspaper</p>
+          <p>Yearbook</p>
+        </div>
+        <div class="card">
+          <h5>Sports and activities</h5>
+          <p>Varsity Baseball</p>
+          <p>Middle School Baseball</p>
+          <p>Varsity Softball</p>
+          <p>JV Softball</p>
+          <p>Soccer</p>
+          <p>Tennis</p>
+          <p>Cross Country</p>
+          <p>Varsity Football</p>
+          <p>JV Football</p>
+          <p>Varsity Volleyball</p>
+          <p>Varsity Girls' Basketball</p>
+          <p>JV Girls' Basketball</p>
+          <p>Varsity Boys' Basketball</p>
+          <p>JV Boys' Basketball</p>
+          <p>Middle School Basketball</p>
+          <p>Band</p>
+          <p>Cheerleading</p>
+        </div>
+      </div>
+
+      <h1>Bland Elementary School</h1>
+      <img src="img/cub.png" class="elementary-img">
+      <h5>31 Rocket Drive Bland, VA 24315</h5>
+      <h5>(276)688-4451</h5>
+      <button class="btn">
+        <a href="https://www.bland.k12.va.us/apps/pages/index.jsp?uREC_ID=307615&type=d" target="_blank">Website</a>
+      </button>
+      <div class="elementary-img2">
+        <img src="img/elementary.jpg">
+      </div>
+      <div class="info-text">
+        <p>
+          Along with the high school in 2014, Bland Elementary School and Rocky Gap Elementary schools
+          consolidated to form Bland County Elementary School. Unlike the high school, students at Rocky Gap
+          elementary school were moved to Bland Elementary School located in nearby Bland, VA as part of the 
+          consolidation. The school provides a safe and challenging environment and a quality early education 
+          for the younger students of the county in grades K-6.
+        </p>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer-icons">
+        <a href="https://www.facebook.com/RockyGap.VA/" target="_blank">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://twitter.com/blandcountyva" target="_blank">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.google.com/search?rlz=1C1CHBF_enUS858US858&sxsrf=AB5stBiDQSTPEBB-Fhowz_jPqs2yz_6IYQ:1689977826975&q=rocky+gap+va+images&tbm=isch&source=univ&fir=VLU8CmyBwZbEqM%252CO3vELgHQNZrKHM%252C_%253Bze44_q_FakkxnM%252CHZgERr2DExO2TM%252C_%253B10UWeERkgcQFnM%252CyH8sgEoom3I0pM%252C_%253BGsYR0fJhtFpMLM%252C7OGTq_GkpYQqaM%252C_%253BhS4NoIm8a0FrcM%252Ck90jooonHB4nRM%252C_%253BznQxXG5gLSm9YM%252CrpJ_gLuUjK3nKM%252C_%253B3YgSFCTR5noMNM%252CXlH77B6R32llRM%252C_%253BWDwgxYATgLd5XM%252C7OGTq_GkpYQqaM%252C_%253Bvf074gIuSzPOAM%252Cb2pOkTEtvOCtNM%252C_%253B2W11vrbRfYxmjM%252ClTy8JHsBIopxkM%252C_&usg=AI4_-kTKg70vAa3DtrS6JLXV4LXPgaGMLw&sa=X&ved=2ahUKEwjX7LeA6qCAAxXvEFkFHcSODtoQjJkEegQIDRAC&biw=1366&bih=643&dpr=1" target="_blank" class="nav-icon">
+          <i class="fas fa-camera"></i>
+        </a>
+        </a>
+        <a href="https://www.linkedin.com/jobs/jobs-in-rocky-gap-virginia-va?trk=location_hub_city_cross_link&pageNum=0&position=6&currentJobId=1217333385" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://www.google.com/search?q=rocky+gap+va&oq=rocky+gap+va&aqs=chrome..69i57j0l4j69i60.12054j0j7&sourceid=chrome&ie=UTF-8" target="_blank">
+          <i class="fab fa-google"></i>
+        </a>
+      </div>
+    </footer>
   
-  <!-- jquery -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-  <!-- bootstrap js --> 
-    <script src="js/bootstrap.bundle.min.js"></script>
-  <!-- script js --> 
+    <script src="js/all.js"></script>
+    <script src="JS/script.js"></script> 
+
   </body>
-  </html>
+</html>
