--- a/government.html
+++ b/government.html
@@ -1,99 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<! bootstrap css -->
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-<!-- main css -->
-  <link rel="stylesheet" href="css/main.css">
-<! -- font awesome -->
-  <script src="js/all.js"></script>
-  <title>Rocky Gap, Virginia Government</title>
-</head>
-
-<body>
-
-<!-- nav element -->
-<nav class="navbar navbar-expand-lg px-3" id="navBar">
-  <a href="#" class="navbar-brand">
-    <img src="img/Eagle.png" alt="logo">
-  </a>
-<button class="navbar-toggler" type="button" data-toggle='collapse' data-target='#myNav'>
-  <span class="navbar-icon">
-    <i class="fas fa-bars"></i>
-  </span>
-</button>
-  <div class="collapse navbar-collapse" id="myNav">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item active">
-        <a href="index.htm" class="nav-link">
-          home
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="community.htm" class="nav-link">
-          community
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="education.htm" class="nav-link">
-          education
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="government.htm" class="nav-link">
-          government
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="photos.htm" class="nav-link" target="_blank">
-          gallery
-        </a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          links
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="https://www.blandcountyva.gov/" target="_blank">Bland County Va Website</a>  
-          <a class="dropdown-item" href="https://blandcountyhistsoc.org/" target="_blank">Bland County Historical Society</a>
-          <a class="dropdown-item" href="https://www.bland.k12.va.us/" target="_blank">Bland County Public Schools</a>
-          <a class="dropdown-item" href="https://www.blandcountyva.gov/events/" target="_blank">Community Calendar</a>
-          <a class="dropdown-item" href="https://forecast.weather.gov/MapClick.php?lat=37.241440700000055&lon=-81.10675179999998#.YK2rg6hKjIU" target="_blank">Weather Forcast</a>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Rocky Gap, Virginia Government</title>
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="nav-container">
+        <div class="nav-header">
+          <img src="img/logo-2.png" alt="logo">
+            <a href="#" class="nav-toggle" id="hamburger">
+              <span class="bar bar-top"></span>
+              <span class="bar bar-mid"></span>
+              <span class="bar bar-bottom"></span>
+            </a>
         </div>
-      </li>
-    </ul>
- <!-- social icons -->
-    <div class="nav-icons d-none d-lg-block">
-      <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="nav-icon">
-        <i class="fab fa-facebook"></i>
-      </a>
-      <a href="https://twitter.com/blandcountyva" target="_blank" class="nav-icon">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="photos.htm" target="_blank" class="nav-icon">
-        <i class="fas fa-camera"></i>
-      </a>
-    </div>
-  </div>
-</nav>
-<!-- end of nav element -->
-  
-  <div class="government">
-    <h1>Government</h1>
-    <div class="logos">
+        <ul class="nav-links">
+          <li class="nav-link">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-link">
+            <a href="community.html">Community</a>
+          </li>
+          <li class="nav-link">
+            <a href="education.html">Education</a>
+          </li>
+          <li class="nav-link">
+            <a href="government.html">Government</a>
+          </li>
+          <li class="nav-link">
+            <a href="gallery.html">Gallery</a>
+          </li>
+          <li class="nav-link menu-links">
+            <a href="#" class="dropdown">Links <i class="plus"></i></a>
+            <ul class="sub-menu">
+              <li class="menu-item"><a href="https://www.blandcountyva.gov/" target="_blank">Bland County VA Website</a></li>
+              <li class="menu-item"><a href="https://blandcountyhistsoc.org/" target="_blank">Bland County Historical Society</a></li>
+              <li class="menu-item"><a href="https://www.bland.k12.va.us/" target="_blank">Bland County Public Schools</a></li>
+              <li class="menu-item"><a href="https://www.blandcountyva.gov/events/" target="_blank">Community Calendar</a></li>
+              <li class="menu-item"><a href="https://forecast.weather.gov/MapClick.php?lat=37.241440700000055&lon=-81.10675179999998#.YK2rg6hKjIU" target="_blank">Weather Forcast</a></li>
+            </ul>
+          </li>
+        </ul>
+        <div class="nav-icons">
+          <a href="https://www.facebook.com/RockyGap.VA/"" target="_blank" class="nav-icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+          <a href="https://twitter.com/blandcountyva" target="_blank" class="nav-icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://www.google.com/search?rlz=1C1CHBF_enUS858US858&sxsrf=AB5stBiDQSTPEBB-Fhowz_jPqs2yz_6IYQ:1689977826975&q=rocky+gap+va+images&tbm=isch&source=univ&fir=VLU8CmyBwZbEqM%252CO3vELgHQNZrKHM%252C_%253Bze44_q_FakkxnM%252CHZgERr2DExO2TM%252C_%253B10UWeERkgcQFnM%252CyH8sgEoom3I0pM%252C_%253BGsYR0fJhtFpMLM%252C7OGTq_GkpYQqaM%252C_%253BhS4NoIm8a0FrcM%252Ck90jooonHB4nRM%252C_%253BznQxXG5gLSm9YM%252CrpJ_gLuUjK3nKM%252C_%253B3YgSFCTR5noMNM%252CXlH77B6R32llRM%252C_%253BWDwgxYATgLd5XM%252C7OGTq_GkpYQqaM%252C_%253Bvf074gIuSzPOAM%252Cb2pOkTEtvOCtNM%252C_%253B2W11vrbRfYxmjM%252ClTy8JHsBIopxkM%252C_&usg=AI4_-kTKg70vAa3DtrS6JLXV4LXPgaGMLw&sa=X&ved=2ahUKEwjX7LeA6qCAAxXvEFkFHcSODtoQjJkEegQIDRAC&biw=1366&bih=643&dpr=1" target="_blank" class="nav-icon">
+            <i class="fas fa-camera"></i>
+          </a>
+        </div>
+      </div>
+    </nav>
+
+    <section class="government">
+      <h1>Government</h1>
+      <div class="logos">
         <img src="img/county-logo.png">
         <img src="img/us-flag.png">
         <img src="img/state-logo.png">
-    </div>
-    <div class="government-intro">
+      </div>
+      <div class="government-intro">
         <div class="government-img">
-           <h3>Bland County Courthouse</h3>
-           <img src="img/courthouse.jpg">
-           <p>612 Main St. Bland, VA 24315</p>
+          <h3>Bland County Courthouse</h3>
+          <img src="img/courthouse.jpg">
+          <p>612 Main St. Bland, VA 24315</p>
         </div>
         <div class="intro-text">
            <h3>Officials</h3>
@@ -105,94 +82,97 @@
            <p><span class="bold">Bland County Sheriff's Office:</span> (276) 688-4311</p>
            <p><span class="bold">Bland County Treasurer:</span> (276) 688-3741</p>
         </div>
-    </div>
-    <div class="cards-container">
+      </div>
+      <div class="cards-container">
         <div class="card">
-        <h5>Departments</h5>
-
-        <p><span class="bold">Rocky Gap Post Office</span></p>
-        <p>12797 N Scenic Hwy Rocky Gap, VA 24366</p>
-        <p>(276) 928-1144</p>
-        <hr>
-
-        <p><span class="bold">Bland County Public Works Department</span></p>
-        <p>612 Main Street Suite 204, Bland VA 24315</p>
-        <p>(276) 688-4607</p>
-        <hr>
-
-        <p><span class="bold">Bland County Social Services</span></p>
-        <p>612 Main St. Suite 208, Bland, VA 24315</p>
-        <p>(276) 688-4111</p>
-        <hr>
-
-        <p><span class="bold">Bland County Public Schools</span></p>
-        <p>361 Bears Trail, Bastain, VA 24314</p>
-        <p>(276) 688-3361</p>
-        <hr>
-
-        <p><span class="bold">Bland County Public Library</span></p>
-        <p>697 Main St., Bland, VA 24315</p>
-        <p>(276) 688-3737</p>
-        <hr>
-
-        <p><span class="bold">Bland County Medical Clinic</span></p>
-        <p>12301 Grapefield Rd, Bastain, VA 24314</p>
-        <p>(276) 688-4331</p>
+          <h5>Departments</h5>
+          <div class="department-info">
+            <p><span class="bold">Rocky Gap Post Office</span></p>
+            <p>12797 N Scenic Hwy Rocky Gap, VA 24366</p>
+            <p>(276) 928-1144</p>
+          </div>
+          <hr>
+          <div class="department-info">
+            <p><span class="bold">Bland County Public Works Department</span></p>
+            <p>612 Main Street Suite 204, Bland VA 24315</p>
+            <p>(276) 688-4607</p>
+          </div>
+          <hr>
+          <div class="department-info">
+            <p><span class="bold">Bland County Social Services</span></p>
+            <p>612 Main St. Suite 208, Bland, VA 24315</p>
+            <p>(276) 688-4111</p>
+          </div>
+          <hr>
+          <div class="department-info">
+            <p><span class="bold">Bland County Public Schools</span></p>
+            <p>361 Bears Trail, Bastain, VA 24314</p>
+            <p>(276) 688-3361</p>
+          </div>
+          <hr>
+          <div class="department-info">
+            <p><span class="bold">Bland County Public Library</span></p>
+            <p>697 Main St., Bland, VA 24315</p>
+            <p>(276) 688-3737</p>
+          </div>
+          <hr>
+          <div class="department-info">
+            <p><span class="bold">Bland County Medical Clinic</span></p>
+            <p>12301 Grapefield Rd, Bastain, VA 24314</p>
+            <p>(276) 688-4331</p>
+          </div>
         </div>
         <div class="card">
-            <h5>First Responders</h5>
-
-        <p><span class="bold">Rocky Gap Volunteer Fire Department</span></p>
-        <p>14082 N Scenic Hwy Rocky Gap, VA 24366</p>
-        <p>(276) 928-1010</p>
-        <hr>
-
-        <p><span class="bold">Bland County Volunteer Rescue Squad</span></p>
-        <p>67 Orchard View Ln, Bland, VA 24315</p>
-        <p>(276) 688-4708</p>
-        <hr>
-
-        <p><span class="bold">Bland County Sheriff's Department</span></p>
-        <p>612 Main St Suite 203, Bland, VA 24315</p>
-        <p>(276) 688-4311</p>
-        <hr>
-
-        <img src="img/responders.png">
-
-        <p>Dial 911 24/7 for emergencies</p>
-
-
-
+          <h5>First Responders</h5>
+          <div class="department-info">
+            <p><span class="bold">Rocky Gap Volunteer Fire Department</span></p>
+            <p>14082 N Scenic Hwy Rocky Gap, VA 24366</p>
+            <p>(276) 928-1010</p>
+          </div>
+          <hr>
+          <div class="department-info">
+            <p><span class="bold">Bland County Volunteer Rescue Squad</span></p>
+            <p>67 Orchard View Ln, Bland, VA 24315</p>
+            <p>(276) 688-4708</p>
+          </div>
+          <hr>
+          <div class="department-info">
+            <p><span class="bold">Bland County Sheriff's Department</span></p>
+            <p>612 Main St Suite 203, Bland, VA 24315</p>
+            <p>(276) 688-4311</p>
+          </div>
+          <hr>
+          <div class="department-info">
+            <img src="img/responders.png">
+            <p>Dial 911 24/7 for emergencies</p>
+          </div>
         </div>
-    </div>
-    <img src="img/rglogo4.png">
-</div>
-
-<!-- footer -->
-<footer class="footer py-4">
-    <div class="footer-icons d-flex justify-content-around">
-      <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="footer-icon">
-        <i class="fab fa-facebook"></i>
-      </a>
-      <a href="https://twitter.com/blandcountyva" target="_blank" class="footer-icon">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="photos.htm" target="_blank" class="footer-icon">
-        <i class="fas fa-camera"></i>
-      </a>
-      <a href="https://www.linkedin.com/jobs/jobs-in-rocky-gap-virginia-va?trk=location_hub_city_cross_link&pageNum=0&position=6&currentJobId=1217333385" target="_blank" class="footer-icon">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="https://www.google.com/search?q=rocky+gap+va&oq=rocky+gap+va&aqs=chrome..69i57j0l4j69i60.12054j0j7&sourceid=chrome&ie=UTF-8" target="_blank" class="footer-icon">
-        <i class="fab fa-google"></i>
-      </a>
-    </div>
-  </footer>
+      </div>
+      <img src="img/rglogo4.png" class="rg-img">
+    </section>
   
-  <! -- jquery -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-  <!-- bootstrap js --> 
-    <script src="js/bootstrap.bundle.min.js"></script>
-  <!-- script js --> 
+    <footer class="footer">
+      <div class="footer-icons">
+        <a href="https://www.facebook.com/RockyGap.VA/" target="_blank">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://twitter.com/blandcountyva" target="_blank">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.google.com/search?rlz=1C1CHBF_enUS858US858&sxsrf=AB5stBiDQSTPEBB-Fhowz_jPqs2yz_6IYQ:1689977826975&q=rocky+gap+va+images&tbm=isch&source=univ&fir=VLU8CmyBwZbEqM%252CO3vELgHQNZrKHM%252C_%253Bze44_q_FakkxnM%252CHZgERr2DExO2TM%252C_%253B10UWeERkgcQFnM%252CyH8sgEoom3I0pM%252C_%253BGsYR0fJhtFpMLM%252C7OGTq_GkpYQqaM%252C_%253BhS4NoIm8a0FrcM%252Ck90jooonHB4nRM%252C_%253BznQxXG5gLSm9YM%252CrpJ_gLuUjK3nKM%252C_%253B3YgSFCTR5noMNM%252CXlH77B6R32llRM%252C_%253BWDwgxYATgLd5XM%252C7OGTq_GkpYQqaM%252C_%253Bvf074gIuSzPOAM%252Cb2pOkTEtvOCtNM%252C_%253B2W11vrbRfYxmjM%252ClTy8JHsBIopxkM%252C_&usg=AI4_-kTKg70vAa3DtrS6JLXV4LXPgaGMLw&sa=X&ved=2ahUKEwjX7LeA6qCAAxXvEFkFHcSODtoQjJkEegQIDRAC&biw=1366&bih=643&dpr=1" target="_blank" class="nav-icon">
+          <i class="fas fa-camera"></i>
+        </a>
+        <a href="https://www.linkedin.com/jobs/jobs-in-rocky-gap-virginia-va?trk=location_hub_city_cross_link&pageNum=0&position=6&currentJobId=1217333385" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://www.google.com/search?q=rocky+gap+va&oq=rocky+gap+va&aqs=chrome..69i57j0l4j69i60.12054j0j7&sourceid=chrome&ie=UTF-8" target="_blank">
+          <i class="fab fa-google"></i>
+        </a>
+      </div>
+    </footer>
+
+    <script src="js/all.js"></script>
+    <script src="JS/script.js"></script>
+
   </body>
-  </html>
+</html>
