--- a/yearbook.html
+++ b/yearbook.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
     crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/yearbook-style.css">
+    <link rel="stylesheet" href="css/yearbook.css">
     <title>RHS Yearbook Page Photos</title>
   </head>
   <body>
@@ -114,7 +114,7 @@
         </div>
       </div> 
     </div>
-  
+    
     <script src="js/yearbook-script.js"></script>
 
   </body>
