--- a/gallery.html
+++ b/gallery.html
@@ -11,15 +11,30 @@
     <title>Photo Gallery</title>
   </head>
   <body>
+    <div class="nav-top">
+      <div class="logo-img">
+        <img src="img/logo-10.png">
+      </div>
+      <div class="nav-icons">
+        <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="nav-icon">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://twitter.com/blandcountyva" target="_blank" class="nav-icon">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.google.com/search?rlz=1C1CHBF_enUS858US858&sxsrf=AB5stBiDQSTPEBB-Fhowz_jPqs2yz_6IYQ:1689977826975&q=rocky+gap+va+images&tbm=isch&source=univ&fir=VLU8CmyBwZbEqM%252CO3vELgHQNZrKHM%252C_%253Bze44_q_FakkxnM%252CHZgERr2DExO2TM%252C_%253B10UWeERkgcQFnM%252CyH8sgEoom3I0pM%252C_%253BGsYR0fJhtFpMLM%252C7OGTq_GkpYQqaM%252C_%253BhS4NoIm8a0FrcM%252Ck90jooonHB4nRM%252C_%253BznQxXG5gLSm9YM%252CrpJ_gLuUjK3nKM%252C_%253B3YgSFCTR5noMNM%252CXlH77B6R32llRM%252C_%253BWDwgxYATgLd5XM%252C7OGTq_GkpYQqaM%252C_%253Bvf074gIuSzPOAM%252Cb2pOkTEtvOCtNM%252C_%253B2W11vrbRfYxmjM%252ClTy8JHsBIopxkM%252C_&usg=AI4_-kTKg70vAa3DtrS6JLXV4LXPgaGMLw&sa=X&ved=2ahUKEwjX7LeA6qCAAxXvEFkFHcSODtoQjJkEegQIDRAC&biw=1366&bih=643&dpr=1" target="_blank" class="nav-icon">
+          <i class="fas fa-camera"></i>
+        </a>
+      </div>
+    </div>
     <nav class="navbar">
       <div class="nav-container">
         <div class="nav-header">
-          <img src="img/logo-2.png" alt="logo">
-            <a href="#" class="nav-toggle" id="hamburger">
-              <span class="bar bar-top"></span>
-              <span class="bar bar-mid"></span>
-              <span class="bar bar-bottom"></span>
-            </a>
+          <a href="#" class="nav-toggle" id="hamburger">
+            <span class="bar bar-top"></span>
+            <span class="bar bar-mid"></span>
+            <span class="bar bar-bottom"></span>
+          </a>
         </div>
         <ul class="nav-links">
           <li class="nav-link">
@@ -39,28 +54,31 @@
           </li>
           <li class="nav-link menu-links">
             <a href="#" class="dropdown">Links <i class="plus"></i></a>
-            <ul class="sub-menu">
-              <li class="menu-item"><a href="https://www.blandcountyva.gov/" target="_blank">Bland County VA Website</a></li>
-              <li class="menu-item"><a href="https://blandcountyhistsoc.org/" target="_blank">Bland County Historical Society</a></li>
-              <li class="menu-item"><a href="https://www.bland.k12.va.us/" target="_blank">Bland County Public Schools</a></li>
-              <li class="menu-item"><a href="https://www.blandcountyva.gov/events/" target="_blank">Community Calendar</a></li>
-              <li class="menu-item"><a href="https://forecast.weather.gov/MapClick.php?lat=37.241440700000055&lon=-81.10675179999998#.YK2rg6hKjIU" target="_blank">Weather Forcast</a></li>
-            </ul>
+              <ul class="sub-menu">
+                <li class="menu-item"><a href="https://www.blandcountyva.gov/" target="_blank">Bland County VA Website</a></li>
+                <li class="menu-item"><a href="https://blandcountyhistsoc.org/" target="_blank">Bland County Historical Society</a></li>
+                <li class="menu-item"><a href="https://www.bland.k12.va.us/" target="_blank">Bland County Public Schools</a></li>
+                <li class="menu-item"><a href="https://www.blandcountyva.gov/events/" target="_blank">Community Calendar</a></li>
+                <li class="menu-item"><a href="https://forecast.weather.gov/MapClick.php?lat=37.241440700000055&lon=-81.10675179999998#.YK2rg6hKjIU" target="_blank">Weather Forcast</a></li>
+              </ul>
           </li>
         </ul>
-        <div class="nav-icons">
-          <a href="https://www.facebook.com/RockyGap.VA/"" target="_blank" class="nav-icon">
-            <i class="fab fa-facebook"></i>
-          </a>
-          <a href="https://twitter.com/blandcountyva" target="_blank" class="nav-icon">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="https://www.google.com/search?rlz=1C1CHBF_enUS858US858&sxsrf=AB5stBiDQSTPEBB-Fhowz_jPqs2yz_6IYQ:1689977826975&q=rocky+gap+va+images&tbm=isch&source=univ&fir=VLU8CmyBwZbEqM%252CO3vELgHQNZrKHM%252C_%253Bze44_q_FakkxnM%252CHZgERr2DExO2TM%252C_%253B10UWeERkgcQFnM%252CyH8sgEoom3I0pM%252C_%253BGsYR0fJhtFpMLM%252C7OGTq_GkpYQqaM%252C_%253BhS4NoIm8a0FrcM%252Ck90jooonHB4nRM%252C_%253BznQxXG5gLSm9YM%252CrpJ_gLuUjK3nKM%252C_%253B3YgSFCTR5noMNM%252CXlH77B6R32llRM%252C_%253BWDwgxYATgLd5XM%252C7OGTq_GkpYQqaM%252C_%253Bvf074gIuSzPOAM%252Cb2pOkTEtvOCtNM%252C_%253B2W11vrbRfYxmjM%252ClTy8JHsBIopxkM%252C_&usg=AI4_-kTKg70vAa3DtrS6JLXV4LXPgaGMLw&sa=X&ved=2ahUKEwjX7LeA6qCAAxXvEFkFHcSODtoQjJkEegQIDRAC&biw=1366&bih=643&dpr=1" target="_blank" class="nav-icon">
-            <i class="fas fa-camera"></i>
-          </a>
-        </div>
       </div>
     </nav>
+
+    <header class="header">
+      <div class="header-container">
+        <div class="text-container">
+          <h5 class="title-heading">Welcome to</h5>
+          <div class="town-of">
+            <div class="line"></div>
+            <p>the town of</p>
+            <div class="line"></div>
+          </div>
+          <h2>rocky Gap, virginia</h2>
+        </div>
+      </div>
+    </header>
 
     <div class="gallery-background">
       <h1>photo <span class="gallery-bold">gallery</span></h1>
