--- a/gallery.html
+++ b/gallery.html
@@ -145,23 +145,38 @@
     </div>
     <div class="img-shadow"></div>
 
+    <div class="bottom-logo">
+      <img src="img/bottom-logo.png" alt="Rocky Gap Va logo">
+    </div>
+
+    <div class="strip"></div>
+
     <footer class="footer">
-      <div class="footer-icons">
-        <a href="https://www.facebook.com/RockyGap.VA/" target="_blank">
-          <i class="fab fa-facebook"></i>
-        </a>
-        <a href="https://twitter.com/blandcountyva" target="_blank">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="https://www.google.com/search?rlz=1C1CHBF_enUS858US858&sxsrf=AB5stBiDQSTPEBB-Fhowz_jPqs2yz_6IYQ:1689977826975&q=rocky+gap+va+images&tbm=isch&source=univ&fir=VLU8CmyBwZbEqM%252CO3vELgHQNZrKHM%252C_%253Bze44_q_FakkxnM%252CHZgERr2DExO2TM%252C_%253B10UWeERkgcQFnM%252CyH8sgEoom3I0pM%252C_%253BGsYR0fJhtFpMLM%252C7OGTq_GkpYQqaM%252C_%253BhS4NoIm8a0FrcM%252Ck90jooonHB4nRM%252C_%253BznQxXG5gLSm9YM%252CrpJ_gLuUjK3nKM%252C_%253B3YgSFCTR5noMNM%252CXlH77B6R32llRM%252C_%253BWDwgxYATgLd5XM%252C7OGTq_GkpYQqaM%252C_%253Bvf074gIuSzPOAM%252Cb2pOkTEtvOCtNM%252C_%253B2W11vrbRfYxmjM%252ClTy8JHsBIopxkM%252C_&usg=AI4_-kTKg70vAa3DtrS6JLXV4LXPgaGMLw&sa=X&ved=2ahUKEwjX7LeA6qCAAxXvEFkFHcSODtoQjJkEegQIDRAC&biw=1366&bih=643&dpr=1" target="_blank" class="nav-icon">
-          <i class="fas fa-camera"></i>
-        </a>
-        <a href="https://www.linkedin.com/jobs/jobs-in-rocky-gap-virginia-va?trk=location_hub_city_cross_link&pageNum=0&position=6&currentJobId=1217333385" target="_blank">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="https://www.google.com/search?q=rocky+gap+va&oq=rocky+gap+va&aqs=chrome..69i57j0l4j69i60.12054j0j7&sourceid=chrome&ie=UTF-8" target="_blank">
-          <i class="fab fa-google"></i>
-        </a>
+      <div class="footer-top">
+        <div class="footer-icons">
+          <a href="https://www.facebook.com/RockyGap.VA/" target="_blank">
+            <i class="fab fa-facebook"></i>
+          </a>
+          <a href="https://twitter.com/blandcountyva" target="_blank">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://www.google.com/search?rlz=1C1CHBF_enUS858US858&sxsrf=AB5stBiDQSTPEBB-Fhowz_jPqs2yz_6IYQ:1689977826975&q=rocky+gap+va+images&tbm=isch&source=univ&fir=VLU8CmyBwZbEqM%252CO3vELgHQNZrKHM%252C_%253Bze44_q_FakkxnM%252CHZgERr2DExO2TM%252C_%253B10UWeERkgcQFnM%252CyH8sgEoom3I0pM%252C_%253BGsYR0fJhtFpMLM%252C7OGTq_GkpYQqaM%252C_%253BhS4NoIm8a0FrcM%252Ck90jooonHB4nRM%252C_%253BznQxXG5gLSm9YM%252CrpJ_gLuUjK3nKM%252C_%253B3YgSFCTR5noMNM%252CXlH77B6R32llRM%252C_%253BWDwgxYATgLd5XM%252C7OGTq_GkpYQqaM%252C_%253Bvf074gIuSzPOAM%252Cb2pOkTEtvOCtNM%252C_%253B2W11vrbRfYxmjM%252ClTy8JHsBIopxkM%252C_&usg=AI4_-kTKg70vAa3DtrS6JLXV4LXPgaGMLw&sa=X&ved=2ahUKEwjX7LeA6qCAAxXvEFkFHcSODtoQjJkEegQIDRAC&biw=1366&bih=643&dpr=1" target="_blank">
+            <i class="fas fa-camera"></i>
+          </a>
+          <a href="https://www.linkedin.com/jobs/jobs-in-rocky-gap-virginia-va?trk=location_hub_city_cross_link&pageNum=0&position=6&currentJobId=1217333385" target="_blank">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <a href="https://www.google.com/search?q=rocky+gap+va&oq=rocky+gap+va&aqs=chrome..69i57j0l4j69i60.12054j0j7&sourceid=chrome&ie=UTF-8" target="_blank">
+            <i class="fab fa-google"></i>
+          </a>
+        </div>
+        <div class="copyright">
+          <p>&copy 2024 The Town of Rocky Gap, Virginia. All rights reserved.</p>
+        </div>
+      </div>
+      <div class="icons-line"></div>
+      <div class="designer">
+        <p>Design by <a href="https://geraldandrewsmedia.com/">Gerald Andrews Media</a></p>
       </div>
     </footer>
 
