--- a/education.html
+++ b/education.html
@@ -72,8 +72,8 @@
         <a href="https://www.bland.k12.va.us/apps/pages/index.jsp?uREC_ID=310940&type=d" target="_blank">Website</a>
       </button>
       <div class="schools-img">
-        <img src="img/school-2.jpg">
-        <img src="img/Rocky Gap Elementary.jpg">
+        <img src="img/high-school.jpg">
+        <img src="img/high-school-2.jpg">
       </div>
       <div class="info-text">
         <p>
