--- a/education.html
+++ b/education.html
@@ -73,7 +73,7 @@
       </button>
       <div class="schools-img">
         <img src="img/high-school.jpg">
-        <img src="img/high-school-2.jpg">
+        <img src="img/highschool-2.jpg">
       </div>
       <div class="info-text">
         <p>
