--- a/community.html
+++ b/community.html
@@ -240,6 +240,11 @@
           <h6>Woody's Grill</h6>
           <p>12749 N Scenic Hwy, Rocky Gap, VA 24366</p>
           <p>(276) 970-9745</p>
+          <div class="links">
+            <a href="https://www.restaurantji.com/va/rocky-gap/woodys-grill-/photos/" target="_blank">
+              <i class="fas fa-link"></i>
+            </a>
+          </div>
         </div>
 
         <div class="card">
