--- a/community.html
+++ b/community.html
@@ -320,7 +320,7 @@
       </div>
       <div class="icons-line"></div>
       <div class="designer">
-        <p>Design by <a href="https://geraldandrewsmedia.com/">Gerald Andrews Media</a></p>
+        <p>Design by <a href="https://geraldandrewsmedia.com/" target="_blank">Gerald Andrews Media</a></p>
       </div>
     </footer>
 
