--- a/gallery.html
+++ b/gallery.html
@@ -162,7 +162,7 @@
       </div>
       <div class="icons-line"></div>
       <div class="designer">
-        <p>Design by <a href="https://geraldandrewsmedia.com/">Gerald Andrews Media</a></p>
+        <p>Design by <a href="https://geraldandrewsmedia.com/" target="_blank">Gerald Andrews Media</a></p>
       </div>
     </footer>
 
