--- a/community.html
+++ b/community.html
@@ -10,7 +10,7 @@
   <body>
     <div class="nav-top">
       <div class="logo-img">
-        <img src="img/logo-10.png">
+        <img src="img/logo-7.png">
       </div>
       <div class="nav-icons">
         <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="nav-icon">
@@ -104,7 +104,7 @@
         </div>
       </div>
 
-      <div class="logo-img">
+      <div class="square-logo">
         <img src="img/logo-3.jpg">
       </div>
 
@@ -115,6 +115,9 @@
           <p>12508 N Scenic Hwy, Rocky Gap, VA 24366</p>
           <p>(276) 928-1550</p>
           <div class="links">
+            <a href="https://www.umc.org/en/find-a-church/church/?id=41606" target="_blank">
+              <i class="fas fa-link"></i>
+            </a>
             <a href="https://www.facebook.com/Rocky-Gap-United-Methodist-335005006640282/" target="_blank">
               <i class="fab fa-facebook"></i>
             </a>
@@ -150,7 +153,7 @@
           <h5>Business Directory</h5>
           <h6>Affordable Dentures</h6>
           <p>12080 N Scenic Hwy, Rocky Gap, VA 24366</p>
-          <p>(276) 928-9608</p>
+          <p>(276) 928-9159</p>
           <div class="links">
             <a href="https://www.affordabledentures.com/locations/va/rocky-gap" target="_blank">
               <i class="fas fa-link"></i>
@@ -239,12 +242,7 @@
 
           <h6>Woody's Grill</h6>
           <p>12749 N Scenic Hwy, Rocky Gap, VA 24366</p>
-          <p>(276) 970-9745</p>
-          <div class="links">
-            <a href="https://www.restaurantji.com/va/rocky-gap/woodys-grill-/photos/" target="_blank">
-              <i class="fas fa-link"></i>
-            </a>
-          </div>
+          <p>(276) 928-1728</p>
         </div>
 
         <div class="card">
@@ -294,7 +292,7 @@
     </div>
 
     <div class="strip"></div>
-
+    
     <footer class="footer">
       <div class="footer-top">
         <div class="footer-icons">
@@ -329,4 +327,3 @@
 
   </body>
 </html>
-
