--- a/education.html
+++ b/education.html
@@ -10,7 +10,7 @@
   <body>
     <div class="nav-top">
       <div class="logo-img">
-        <img src="img/logo-10.png">
+        <img src="img/logo-7.png">
       </div>
       <div class="nav-icons">
         <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="nav-icon">
@@ -72,8 +72,8 @@
         <a href="https://www.bland.k12.va.us/apps/pages/index.jsp?uREC_ID=310940&type=d" target="_blank">Website</a>
       </button>
       <div class="schools-img">
-        <img src="img/high-school.jpg">
-        <img src="img/highschool-2.jpg">
+        <img src="img/high-school.jpg" alt="Bland County High school">
+        <img src="img/highschool-2.jpg" alt="Bland County High School">
       </div>
       <div class="info-text">
         <p>
@@ -194,7 +194,7 @@
         <p>Design by <a href="https://geraldandrewsmedia.com/" target="_blank">Gerald Andrews Media</a></p>
       </div>
     </footer>
-  
+
     <script src="js/all.js"></script>
     <script src="JS/script.js"></script> 
 
