--- a/government.html
+++ b/government.html
@@ -10,7 +10,7 @@
   <body>
     <div class="nav-top">
       <div class="logo-img">
-        <img src="img/logo-10.png">
+        <img src="img/logo-7.png">
       </div>
       <div class="nav-icons">
         <a href="https://www.facebook.com/RockyGap.VA/" target="_blank" class="nav-icon">
@@ -152,14 +152,13 @@
           </div>
         </div>
       </div>
-  </section>
-  
-    <div class="bottom-logo">
-      <img src="img/bottom-logo.png" alt="Rocky Gap Va logo">
-    </div>
+      <div class="bottom-logo">
+        <img src="img/bottom-logo.png" alt="Rocky Gap Va logo">
+      </div>
+    </section>
 
     <div class="strip"></div>
-
+  
     <footer class="footer">
       <div class="footer-top">
         <div class="footer-icons">
@@ -185,7 +184,7 @@
       </div>
       <div class="icons-line"></div>
       <div class="designer">
-        <p>Design by <a href="https://geraldandrewsmedia.com/" target="blank">Gerald Andrews Media</a></p>
+        <p>Design by <a href="https://geraldandrewsmedia.com/" target="_blank">Gerald Andrews Media</a></p>
       </div>
     </footer>
 
